--- a/index.html
+++ b/index.html
@@ -119,9 +119,11 @@
 
 <!-- Controles inclusivos -->
 <div class="controls">
+    <button onclick="document.body.style.fontSize='16px'">Texto chico</button>
     <button onclick="document.body.style.fontSize='18px'">Texto normal</button>
     <button onclick="document.body.style.fontSize='20px'">Texto grande</button>
 </div>
 
 </body>
 </html>
+
